syntax = "proto3";  //定义pb版本号

package protocol;      //定义包名

option go_package = "./;protocol";  // 定义go的包名，用于生成.pb.go

message Say{  //消息结构体
  int64           id    = 1;  //int类型
  string          hello = 2;  //string类型
  repeated string word  = 3;  //string[] 数组
  repeated int32 arrays = 4; //int32[] 数组
}

enum SexType //枚举消息类型，使用enum关键词定义,一个性别类型的枚举类型
{
  UnKnow = 0; //proto3版本中，首成员必须为0，成员不应有相同的值
  MALE = 1;   //1男
  FEMALE = 2; //2女  0未知
}

// 定义一个用户消息
message UserInfo
{
  string name = 1; // 姓名字段
  SexType sex = 2; // 性别字段，使用SexType枚举类型
  int64  id       = 3; //id
  int32  duration = 4; //学习的时长 单位秒
  map<string, int32> score = 5;  //学科 分数的map Map 字段是不能使用repeated关键字修饰。
}


// 定义Quote消息
message Quote {
  string url = 1;
  string title = 2;
  repeated string tags = 3; // 字符串数组类型
}

// 定义ListQuote消息
message ListQuote {
  // 引用上面定义的Quote消息类型，作为results字段的类型
  repeated Quote articles = 1; // repeated关键词标记，说明Quotes字段是一个数组
  // 嵌套消息定义
  message Other {
    string url = 1;
  }
  Other others = 2;
}


service Greeter {  //service 定义的服务
  rpc SayHello (HelloRequest) returns (HelloReply) {}  //定义服务的方法
}

message HelloRequest { //Hello请求体
  string name = 1;
}

message HelloReply {  //Hello返回体
  string message = 1;
}
